# alo

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_INSTRUCTURE.MD  README.md  SECURITY.md  alo_config.example.json  learning-profile.md  privacy-rules.md  pyproject.toml  roadmap.md  skill-map.md
.github/workflows/: ci.yml  publish.yml  testpypi.yml
alo/: assessment.py  cli.py  config.py  exceptions.py  markdown_store.py  models.py  state_manager.py  workspace.py
alo/llm/: __init__.py  client.py  prompts.py  schemas.py
alo/models/: __init__.py  gamification.py  stats.py
alo/services/: __init__.py  assess_service.py  chart_service.py  config_service.py  gamification_service.py  git_service.py  init_service.py  learn_service.py  llm_test_service.py  obsidian_service.py  paths_service.py  practice_session_service.py  readme_service.py  results.py  review_service.py  roadmap_service.py  stats_service.py  status_service.py
alo/ui/: choices.py  dashboard.py  mimo.css  rtl.py  views.py
docs/: release-checklist.md  roadmap-v1.1.md
docs/issues/v1.1/: 01-learning-stats-engine.md  02-workspace-readme-generator.md  03-progress-svg-charts.md  04-gamification-streaks-badges.md  05-workspace-status-command.md  06-roadmap-import-research.md  07-readme-generator-security-tests.md  08-v1.1-release-checklist.md
examples/sample-workspace/: learning-paths.md  learning-profile.md  skill-map.md  tutor-rules.md  weaknesses.md
scripts/: smoke_test.py
tests/: test_assessment.py  test_chart_service.py  test_cli.py  test_config.py  test_dashboard_recovery.py  test_dashboard_settings.py  test_gamification_service.py  test_git_sync.py  test_import_stability.py  test_llm_test_service.py  test_markdown_store.py  test_obsidian_integration.py  test_obsidian_service.py  test_packaging.py  test_practice_session.py  test_readme_service.py  test_rtl.py  test_security.py  test_state_manager.py  test_stats_service.py  test_status_service.py
