[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alo-learning-os"
version = "1.1.0"
description = "Agentic Learning OS - An interactive, AI-native framework for learning in the terminal."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "abolfaazl", email = "abolfaazl@users.noreply.github.com" }
]
keywords = ["learning", "os", "llm", "ai", "terminal", "education"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "typer>=0.12.3",
    "textual>=0.74.1",
    "pydantic>=2.8.2",
    "openai>=1.37.1",
    "rich>=13.7.1",
    "gitpython>=3.1.43",
    "keyring>=25.3.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2"
]

[project.urls]
Homepage = "https://github.com/abolfaazl/alo"
Repository = "https://github.com/abolfaazl/alo"
Issues = "https://github.com/abolfaazl/alo/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[project.scripts]
alo = "alo.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["alo*"]

[tool.setuptools.package-data]
alo = ["**/*.css"]

[tool.ruff]
line-length = 88
